--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -1,6 +1,6 @@
 {
-   "title": "Full-Res. Simple. Supreme Photo Albums",
-   "subtitle": "Die beste Lösung zum Teilen von Fotos: Alben erstellen, Freunde hinzufügen, Bilder in voller Auflösung hochladen und Kommentare schreiben – schaffen Sie unvergessliche Erinnerungen!",
+   "title": "Full-Res. Einfach. Überlegene Fotoalben",
+   "subtitle": "Die beste Lösung zum Teilen von Fotos: Alben erstellen, Freunde hinzufügen, Bilder in voller Auflösung hochladen und Kommentare schreiben - schaffen Sie unvergessliche Erinnerungen!",
    "image-alt-text": "Drei Telefone mit Demoansichten der Echo Photos-Anwendung.",
    "features": {
       "title": "Grenzenlose Erinnerungen",
@@ -37,9 +37,9 @@
       "subtitle": "Sag Nein zum Tracking!",
       "title": "Premium-Datenschutz",
       "paragraphs": [
-         "Echo Photos monetarisiert Ihre privaten Daten nicht. Wir verfolgen keine Benutzerdaten für Anzeigen oder deren Verkauf. Für uns sind Sie unser Kunde – Sie verdienen unseren besten Service!",
+         "Echo Photos monetarisiert Ihre privaten Daten nicht. Wir verfolgen keine Benutzerdaten für Anzeigen oder deren Verkauf. Für uns sind Sie unser Kunde - Sie verdienen unseren besten Service!",
          "Ihre Erinnerungen sind an einem sicheren Ort. Unter Verwendung der höchsten Sicherheitsstandards halten wir uns über die neuesten Sicherheitsfunktionen auf dem Laufenden.",
-         "Unsere Server laufen mit modernsten Sicherheitsfunktionen – wir gefährden nichts.",
+         "Unsere Server laufen mit modernsten Sicherheitsfunktionen - wir riskieren nichts.",
          "Datenschutz steht bei uns an erster Stelle. Alle Ihre Daten werden sicher in der Schweiz gespeichert 🇨🇭. Um den Schutz Ihrer Bilder sollte man sich keine Sorgen machen."
       ]
    },
@@ -48,7 +48,7 @@
       "title": "CO2-Neutral",
       "paragraphs": [
          "Unsere Server laufen komplett CO2-neutral.",
-         "Außerdem haben wir uns zum Ziel gesetzt, bis 2030 völlig kohlenstofffrei zu sein."
+         "Ausserdem haben wir uns zum Ziel gesetzt, bis 2030 völlig kohlenstofffrei zu sein."
       ],
       "image-alt-text": "Blick auf die Berge."
    },
@@ -56,7 +56,7 @@
       "title": "Geteilte Alben",
       "sections": [
          {
-            "title": "Fotos teilen – für immer behalten",
+            "title": "Fotos teilen - für immer behalten",
             "image-alt-text": "Alben in der Echo-Fotos-App.",
             "paragraphs": [
                "Mit Echo Photos können Sie Fotos schnell, einfach und ewig teilen. Kein Abonnement erforderlich!",
