--- a/public/locales/en/invite.json
+++ b/public/locales/en/invite.json
@@ -11,5 +11,5 @@
     "title": "Get Echo Photos",
     "description": "The invite link you are trying to open can be opened with the Echo Photos App."
   },
-  "logo-alt-text": "Echo Photos logo."
+  "logo-alt-text": "Echo Photos"
 }
