--- a/public/locales/de/privacy.json
+++ b/public/locales/de/privacy.json
@@ -1,50 +1,50 @@
 {
-  "head": {
-    "title": "Echo Photos - Privacy"
-  },
-  "title": "Privacy Policy",
-  "sections": [
-    {
-      "paragraphs": [
-        "Echo Labs AG built the Echo Photos app as a Freemium app. This SERVICE is provided by Echo Labs AG at no cost and is intended for use as is.",
-        "This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.",
-        "If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.",
-        "The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Echo Photos unless otherwise defined in this Privacy Policy."
-      ]
-    },
-    {
-      "title": "Information Collection and Use",
-      "description": "Personal data includes any data that is relevant to you personally, e.g. name, address, phone number and location. We process your personal data whilst observing any applicable data protection regulations, with particular reference to the Swiss Data Protection Act and any other applicable international and national laws pertaining to the processing of personal data. We only collect data that is legally or contractually required, or that is necessary for the conclusion and promotion of a contract or required for us to be able to render our services and process contracts. Voluntary information is marked as such. There are no negative consequences of not providing this data. However, not providing data may in some cases make communication with you difficult or delayed. Specifically, we collect and upload your photo and text data when you post it to a group. Additionally, when you enables the app to use adress book data, limited information is uploaded to our server to identify the user's contacts. The thereby collected data is not used to track the user, analyze his behavior and neither sold nor shared to any third-party service."
-    },
-    {
-      "title": "Cookies",
-      "paragraphs": [
-        "Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.",
-        "This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service."
-      ]
-    },
-    {
-      "title": "Security",
-      "description": "We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security."
-    },
-    {
-      "title": "Links to Other Sites",
-      "description": "This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services."
-    },
-    {
-      "title": "Children’s Privacy",
-      "description": "These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions."
-    },
-    {
-      "title": "Changes to This Privacy Policy",
-      "paragraphs": [
-        "We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.",
-        "This policy is effective as of 2021-02-01"
-      ]
-    },
-    {
-      "title": "Contact Us",
-      "description": "If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at"
-    }
-  ]
+   "head": {
+     "title": "Echo Photos - Datenschutz"
+   },
+   "title": "Datenschutzerklärung",
+   "sections": [
+     {
+       "paragraphs": [
+         "Echo Labs AG hat die Echo Photos-App als Freemium-App entwickelt. Dieser DIENST wird von Echo Labs AG kostenlos zur Verfügung gestellt und ist für die Nutzung im Ist-Zustand vorgesehen.",
+         "Diese Seite wird verwendet, um Besucher über unsere Richtlinien zur Erfassung, Verwendung und Offenlegung personenbezogener Daten zu informieren, falls sich jemand für die Nutzung unseres Dienstes entscheidet.",
+         "Wenn Sie sich für die Nutzung unseres Dienstes entscheiden, stimmen Sie der Erfassung und Nutzung von Informationen im Zusammenhang mit dieser Richtlinie zu. Die von uns erfassten personenbezogenen Daten werden zur Bereitstellung und Verbesserung des Dienstes verwendet. Wir werden Ihre Daten nicht verwenden oder an Dritte weitergeben außer wie in dieser Datenschutzrichtlinie beschrieben.",
+         "Die in dieser Datenschutzrichtlinie verwendeten Begriffe haben die gleiche Bedeutung wie in unseren Allgemeinen Geschäftsbedingungen, die bei Echo Photos verfügbar sind, sofern in dieser Datenschutzrichtlinie nichts anderes definiert ist."
+       ]
+     },
+     {
+       "title": "Erhebung und Nutzung von Informationen",
+       "description": "Personenbezogene Daten sind alle Daten, die auf Sie persönlich bedeutsam sind, z. B. Name, Adresse, Telefonnummer und Standort. Wir verarbeiten Ihre personenbezogenen Daten unter Beachtung der geltenden Datenschutzbestimmungen, insbesondere des Schweizerischen Datenschutzgesetzes alle sonstigen anwendbaren internationalen und nationalen Gesetze zur Verarbeitung personenbezogener Daten. Wir erheben nur Daten, die gesetzlich oder vertraglich erforderlich sind, für den Abschluss und die Abwicklung eines Vertrages erforderlich sind oder für die Erbringung unserer Leistungen erforderlich sind Zur Abwicklung von Verträgen. Freiwillige Angaben sind als solche gekennzeichnet. Eine Nichtbereitstellung dieser Daten hat keine negativen Folgen. Allerdings kann die Nichtbereitstellung der Daten im Einzelfall die Kommunikation mit Ihnen erschweren oder verzögern. Konkret erheben wir Ihre Foto- und Textdaten und laden diese hoch, wenn Sie posten es in einer Gruppe. Wenn Sie der App außerdem die Verwendung von Adressbuchdaten ermöglichen, werden begrenzte Informationen auf unseren Server hochgeladen, um die Kontakte des Benutzers zu identifizieren. Die dabei erhobenen Daten werden nicht zur Verfolgung des Nutzers oder zur Analyse seines Verhaltens verwendet und weder verkauft noch an Dritte weitergegeben."
+     },
+     {
+       "title": "Cookies",
+       "paragraphs": [
+         "Cookies sind Dateien mit einer kleinen Datenmenge, die üblicherweise als anonyme eindeutige Kennungen verwendet werden. Diese werden von den Websites, die Sie besuchen, an Ihren Browser gesendet und im internen Speicher Ihres Geräts gespeichert.",
+         "Dieser Dienst verwendet diese 'Cookies' nicht ausdrücklich. Die App kann jedoch Code und Bibliotheken von Drittanbietern verwenden, die 'Cookies' verwenden, um Informationen zu sammeln und ihre Dienste zu verbessern. Sie haben die Möglichkeit, diese Cookies entweder zu akzeptieren oder abzulehnen und zu erfahren, wann Es wird ein Cookie an Ihr Gerät gesendet. Wenn Sie unsere Cookies ablehnen, können Sie möglicherweise einige Teile dieses Dienstes nicht nutzen."
+       ]
+     },
+     {
+       "title": "Sicherheit",
+       "description": "Wir schätzen Ihr Vertrauen in die Bereitstellung Ihrer personenbezogenen Daten und sind daher bestrebt, kommerziell akzeptable Mittel zum Schutz dieser Daten einzusetzen. Denken Sie jedoch daran, dass keine Methode der Übertragung über das Internet oder Methode der elektronischen Speicherung zu 100 % sicher ist zuverlässig, und wir können seine absolute Sicherheit nicht garantieren."
+     },
+     {
+       "title": "Links zu anderen Websites",
+       "description": "Dieser Dienst kann Links zu anderen Websites enthalten. Wenn Sie auf einen Link eines Drittanbieters klicken, werden Sie zu dieser Website weitergeleitet. Beachten Sie, dass diese externen Websites nicht von uns betrieben werden. Wir empfehlen Ihnen daher dringend, dies zu tun Lesen Sie die Datenschutzrichtlinien dieser Websites. Wir haben keine Kontrolle über den Inhalt, die Datenschutzrichtlinien oder die Praktiken von Websites oder Diensten Dritter und übernehmen keine Verantwortung dafür."
+     },
+     {
+       "title": "Datenschutz von Kindern",
+       "description": "Diese Dienste richten sich nicht an Personen unter 13 Jahren. Wir erfassen wissentlich keine personenbezogenen Daten von Kindern unter 13 Jahren. Sollten wir feststellen, dass ein Kind unter 13 Jahren uns personenbezogene Daten zur Verfügung gestellt hat, löschen wir diese unverzüglich. Dies erfolgt von unseren Servern. Wenn Sie ein Elternteil oder Erziehungsberechtigter sind und wissen, dass Ihr Kind uns personenbezogene Daten zur Verfügung gestellt hat, kontaktieren Sie uns bitte, damit wir die erforderlichen Maßnahmen ergreifen können."
+     },
+     {
+       "title": "Änderungen dieser Datenschutzrichtlinie",
+       "paragraphs": [
+         "Wir können unsere Datenschutzrichtlinie von Zeit zu Zeit aktualisieren. Wir empfehlen Ihnen daher, diese Seite regelmäßig auf Änderungen zu überprüfen. Wir werden Sie über alle Änderungen informieren, indem wir die neue Datenschutzrichtlinie auf dieser Seite veröffentlichen.",
+         "Diese Richtlinie gilt ab dem 01.02.2021"
+       ]
+     },
+     {
+       "title": "Kontaktieren Sie uns",
+       "description": "Wenn Sie Fragen oder Anregungen zu unserer Datenschutzrichtlinie haben, zögern Sie nicht, uns unter zu kontaktieren."
+     }
+   ]
 }
