--- a/public/locales/en/invite.json
+++ b/public/locales/en/invite.json
@@ -1,15 +1,14 @@
 {
-  "head": {
-    "title": "Echo Photos - Invite to",
-    "description": "This link allows you to join an Echo Photos album."
+  "social-preview": {
+    "description": "Album Invite"
   },
   "copied": "Copied to clipboard!",
   "title": "Album Invite Code",
+  "albumInvite": "Album Invite",
   "description": "Join the album by entering the code in the Echo Photos app. You can also scan the QR code with your phone if you have the app installed.",
   "copy-code": "Copy Code",
   "download": {
     "title": "Get Echo Photos",
     "description": "The invite link you are trying to open can be opened with the Echo Photos App."
-  },
-  "logo-alt-text": "Echo Photos"
+  }
 }
