--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -1,10 +1,8 @@
 {
    "title": "Full-Res. Einfach. Überlegene Fotoalben",
    "subtitle": "Die beste Lösung zum Teilen von Fotos: Alben erstellen, Freunde hinzufügen, Bilder in voller Auflösung hochladen und Kommentare schreiben - schaffen Sie unvergessliche Erinnerungen!",
-   "image-alt-text": "Drei Telefone mit Demoansichten der Echo Photos-Anwendung.",
    "featureOverviewSection": {
       "title": "Grenzenlose Erinnerungen",
-      "image-alt-text": "Telefon mit einer Demoansicht der EchoPhotos-App.",
       "features": [
          {
             "title": "Volle Auflösung",
@@ -33,7 +31,6 @@
       ]
    },
    "privacy": {
-      "image-alt-text": "Telefon mit einer Demoansicht der Gruppenfunktion.",
       "subtitle": "Sag Nein zum Tracking!",
       "title": "Premium-Datenschutz",
       "paragraphs": [
@@ -49,15 +46,13 @@
       "paragraphs": [
          "Unsere Server laufen komplett CO2-neutral.",
          "Ausserdem haben wir uns zum Ziel gesetzt, bis 2030 völlig kohlenstofffrei zu sein."
-      ],
-      "image-alt-text": "Blick auf die Berge."
+      ]
    },
    "albums": {
       "title": "Geteilte Alben",
       "sections": [
          {
             "title": "Fotos teilen - für immer behalten",
-            "image-alt-text": "Alben in der Echo-Fotos-App.",
             "paragraphs": [
                "Mit Echo Photos können Sie Fotos schnell, einfach und ewig teilen. Kein Abonnement erforderlich!",
                "Echo Photos ist der beste Weg, Bilder eines unvergesslichen Tages mit Ihren Freunden zu teilen.",
@@ -67,8 +62,7 @@
          },
          {
             "title": "Premiumfotos für unvergessliche Momente",
-            "description": "Teilen Sie Bilder mit Hunderten von Gästen von Veranstaltungen wie Hochzeiten, Partys und anderen Festlichkeiten. 🥳",
-            "image-alt-text": "Ein Bild des Nordlichts, das in der Echo Photos-App geteilt wird."
+            "description": "Teilen Sie Bilder mit Hunderten von Gästen von Veranstaltungen wie Hochzeiten, Partys und anderen Festlichkeiten. 🥳"
          }
       ]
    },
@@ -77,13 +71,11 @@
       "description": "Verwenden Sie Echo Photos, wo immer Sie wollen! Neben den wichtigsten iOS- und Android-Apps können Sie Ihre Alben auch auf macOS und im Browser ansehen!",
       "sections": [
          {
-            "image-alt-text": "Screenshot der Echo Photos-Browser-App.",
             "title": "Echo-Fotos in Ihrem Browser",
             "description": "Laden Sie die Fotos über das Echo Photos-Browser-Plugin direkt von Ihrem Computer hoch und laden Sie sie herunter.",
             "open-web-app": "Web-App öffnen"
          },
          {
-            "image-alt-text": "Screenshot der MacOS Echo Photos-App.",
             "title": "Client für MacOS",
             "description": "Verwenden Sie Echo Photos über die macOS-App auf jedem Mac, der dasselbe iCloud-Konto wie Ihr iOS-Gerät verwendet. Derzeit ist die Anmeldung nur auf diese Weise möglich."
          }
