--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,10 +7,9 @@
   },
   "footer": {
     "home": "Home",
-    "albums": "Albums",
+    "weddingLink": "Weddings",
     "webapp": "Web App",
     "instagram": "Instagram",
-    "download": "Download",
     "privacy": "Privacy",
     "press": "Press",
     "copyright": {
