--- a/public/locales/en/wedding.json
+++ b/public/locales/en/wedding.json
@@ -11,7 +11,7 @@
     },
     {      
       "title": "The best in class",
-      "text": "No ads and a premium quality app makes evryone love to use it."
+      "text": "No ads and a premium quality app makes everyone love to use it."
     },
     {      
       "title": "Relive the best moments",
